--- a/print_tag_ac_app/templates/base.html
+++ b/print_tag_ac_app/templates/base.html
@@ -14,7 +14,7 @@
     {% block title %}{% endblock  %}
   </head>
   <body class="prompt-regular">
-    {% comment %} {% include "components/navbar.html" %} {% endcomment %}
+    {% include "components/navbar.html" %}
     <main class="container my-5">
       {% block content %}
       {% endblock %}
